--- a/Finding an outlier in a Dataset.ipynb
+++ b/Finding an outlier in a Dataset.ipynb
@@ -85,7 +85,7 @@
     "    for i in data:\n",
     "        z_score= (i - mean)/std \n",
     "        if np.abs(z_score) > threshold:\n",
-    "            outliers.append(y)\n",
+    "            outliers.append(i)\n",
     "    return outliers"
    ]
   },
@@ -232,8 +232,8 @@
    "source": [
     "## Find the IQR\n",
     "\n",
-    "iqr_value=quantile3-quantile1\n",
-    "print(iqr_value)"
+    "iqr=quantile3-quantile1\n",
+    "print(iqr)"
    ]
   },
   {
