Update Finding an outlier in a Dataset.ipynb

--- a/Finding an outlier in a Dataset.ipynb
+++ b/Finding an outlier in a Dataset.ipynb
@@ -85,7 +85,7 @@
     "    for i in data:\n",
     "        z_score= (i - mean)/std \n",
     "        if np.abs(z_score) > threshold:\n",
-    "            outliers.append(y)\n",
+    "            outliers.append(i)\n",
     "    return outliers"
    ]
   },
@@ -244,8 +244,8 @@
    "source": [
     "## Find the lower bound value and the higher bound value\n",
     "\n",
-    "lower_bound_val = quantile1 -(1.5 * iqr) \n",
-    "upper_bound_val = quantile3 +(1.5 * iqr) "
+    "lower_bound_val = quantile1 -(1.5 * iqr_value) \n",
+    "upper_bound_val = quantile3 +(1.5 * iqr_value) "
    ]
   },
   {
